# food

./: .env  .gitignore  .gitmodules  Cargo.toml  NOTES.md  README.md  TODO.md  docker.build.custom.yml  docker.build.services.yml  docker.build.yml  foods.proto  justfile  payloads.proto  rpxy-config.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build.yml  check.yml  docker.yml  docs.yml  foods.yml  prune.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  recipe.json
backend/bank/: Cargo.toml  build.rs
backend/bank/src/: lib.rs  remote.rs
backend/process/: Cargo.toml
backend/process/src/: lib.rs  main.rs  models.rs  utils.rs
backend/proto/: Cargo.toml  build.rs
backend/proto/src/: lib.rs
backend/server/: Cargo.toml
backend/server/src/: config.rs  database.rs  error.rs  lib.rs  main.rs  routes.rs  search.rs  state.rs  utils.rs
backend/src/: config.rs  database.rs  foods.rs  lib.rs  main.rs  search.rs
backend/tester/: Cargo.toml
backend/tester/src/: main.rs
deploy/: docker.app.yml  docker.build.yml  docker.services.yml  docker.swarm.yml
deploy/meilisearch/: Dockerfile
deploy/redis/: Dockerfile
deploy/reverse_proxy/: .gitignore  config  rpxy.config.toml
examples/: empty.json  response.json
monitor/: docker.monitor.yml
monitor/grafana/: Dockerfile
src/: database.rs  docs.rs  lib.rs  main.rs  user.rs
tester/: Cargo.toml
tester/src/: main.rs
