[package]
name = "food"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = {version="0.8.7", features=["macros"]}
serde = {version = "1.0.228", features = ["derive"]}
tokio = { version="1.48.0", features = ["full"]}
tower-http = { version="0.6.7", features = ["cors"]}
tracing = "0.1.43"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
