[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["macros"] }
chrono = "0.4.42"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"]}
tower-http = { version = "0.6.7", features = ["cors"]}
tracing = "0.1.43"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}

[features]
process = []
