[package]
name = "process"
version.workspace = true
edition.workspace = true

[dependencies]
proto = { path = "../proto" }
chrono = "0.4.42"
prost = "0.14.1"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
