[package]
name = "process"
version.workspace = true
edition.workspace = true

[dependencies]
bank = { path = "../bank" }
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
indicatif = "0.18.3"
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }

[features]
verbose = []
locations = []
