[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { version = "0.8.7", features = ["macros"] }
meilisearch-sdk = "0.31.0"
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.7", features = ["cors"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
