[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { version = "0.8.7", features = ["macros"] }
bank = { path = "../bank", features = ["payloads"] }
meilisearch-sdk = "0.31.0"
once_cell = "1.21.3"
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.7", features = ["cors"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
verbose = []
